--- a/index.html
+++ b/index.html
@@ -3,26 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>hw-001</title>
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo-second-link"
+          ><span class="logo-first-link">Web</span>Studio</a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="index.html" class="topline-words">Studio</a></li>
+          <li>
+            <a href="./portofolio.html" class="topline-words">Portofolio</a>
+          </li>
+          <li><a href="" class="topline-words">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address-mail"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address-phone-number"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -32,37 +47,37 @@
     <main>
       <!-- Section one -->
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
       <!-- Section two -->
       <section>
         <h2 hidden>Title</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-two-header">Strategy</h3>
+            <p class="section-two-pararaf">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-two-header">Punctuality</h3>
+            <p class="section-two-pararaf">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-two-header">Diligence</h3>
+            <p class="section-two-pararaf">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-two-header">Technologies</h3>
+            <p class="section-two-pararaf">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,7 +87,7 @@
 
       <!-- Section three -->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-three-header">What are we doing</h2>
         <ul>
           <li>
             <img src="./images/image-one.jpg" alt="Image-one" width="360" />
@@ -88,17 +103,17 @@
 
       <!-- Section four -->
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-four-header">Our Team</h2>
         <ul>
           <li>
             <img src="./images/team-man-one.jpg" alt="Man-One" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-four-names">Mark Guerrero</h3>
+            <p class="section-four-jobs">Product Designer</p>
           </li>
           <li>
             <img src="./images/team-man-two.jpg" alt="Man-Two" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-four-names">Tom Ford</h3>
+            <p class="section-four-jobs">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -106,13 +121,13 @@
               alt="Woman-three"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-four-names">Camila Garcia</h3>
+            <p class="section-four-jobs">Marketing</p>
           </li>
           <li>
             <img src="./images/team-man-four.jpg" alt="Man-Four" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-four-names">Daniel Wilson</h3>
+            <p class="section-four-jobs">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -120,8 +135,10 @@
 
     <!-- Footer section -->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-second-link"
+        ><span class="logo-first-link">Web</span>Studio</a
+      >
+      <p class="fotter-paragraf">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
