--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./portofolio.html" class="logo-second-link"
+        <a href="./portfolio.html" class="logo-second-link"
           ><span class="logo-first-link">Web</span>Studio</a
         >
         <ul>
           <li><a href="./index.html" class="topline-words">Studio</a></li>
           <li>
-            <a href="./portofolio.html" class="topline-words">Portofolio</a>
+            <a href="./portfolio.html" class="topline-words">Portofolio</a>
           </li>
           <li><a href="" class="topline-words">Contacts</a></li>
         </ul>
