--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="index.html" class="topline-words">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="topline-words">Portofolio</a>
+            <a href="./portfolio.html" class="topline-words">Portfolio</a>
           </li>
           <li><a href="" class="topline-words">Contacts</a></li>
         </ul>
