--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
           ><span class="logo-first-link">Web</span>Studio</a
         >
         <ul>
-          <li><a href="index.html" class="topline-words">Studio</a></li>
+          <li><a href="index.html" class="topline-words-header">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="topline-words">Portfolio</a>
+            <a href="./portfolio.html" class="topline-words-header"
+              >Portfolio</a
+            >
           </li>
           <li><a href="" class="topline-words">Contacts</a></li>
         </ul>
@@ -30,7 +32,7 @@
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-mail"
+            <a href="mailto:info@devstudio.com" class="address-mail-header"
               >info@devstudio.com</a
             >
           </li>
@@ -47,13 +49,15 @@
     <main>
       <!-- Section one -->
       <section>
-        <h1 class="hero-header">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <h1 class="hero-section-header">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="hero-section-button">Order Service</button>
       </section>
       <!-- Section two -->
       <section>
         <h2 hidden>Title</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="section-two-header">Strategy</h3>
             <p class="section-two-pararaf">
@@ -102,9 +106,9 @@
       </section>
 
       <!-- Section four -->
-      <section>
+      <section class="section-four-page">
         <h2 class="section-four-header">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/team-man-one.jpg" alt="Man-One" width="264" />
             <h3 class="section-four-names">Mark Guerrero</h3>
@@ -134,11 +138,11 @@
     </main>
 
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html" class="logo-second-link"
-        ><span class="logo-first-link">Web</span>Studio</a
+    <footer class="footer-section-down">
+      <a href="./portfolio.html" class="logo-first-link"
+        >Web<span class="logo-second-link-light">Studio</span></a
       >
-      <p class="fotter-paragraf">
+      <p class="fotter-paragraf-section">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
