--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,25 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./portfolio.html" class="logo-second-link"
-          ><span class="logo-first-link">Web</span>Studio</a
+        <a href="./portfolio.html" class="logo-first-link"
+          >Web<span class="logo-second-link">Studio</span></a
         >
-        <ul>
-          <li><a href="./index.html" class="topline-words">Studio</a></li>
+        <ul class="list">
           <li>
-            <a href="./portfolio.html" class="topline-words">Portfolio</a>
+            <a href="./index.html" class="topline-words-header">Studio</a>
           </li>
-          <li><a href="" class="topline-words">Contacts</a></li>
+          <li>
+            <a href="./portfolio.html" class="topline-words-header"
+              >Portfolio</a
+            >
+          </li>
+          <li><a href="" class="topline-words-header">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-mail"
+            <a href="mailto:info@devstudio.com" class="address-mail-header"
               >info@devstudio.com</a
             >
           </li>
@@ -46,29 +50,33 @@
     <main>
       <!-- Buttons -->
       <section>
+        <h1 hidden>Text</h1>
         <ul>
           <li>
-            <button type="button" class="filter-buttons">All</button>
+            <button type="button" class="filter-buttons-section">All</button>
           </li>
           <li>
-            <button type="button" class="filter-buttons">Web Site</button>
+            <button type="button" class="filter-buttons-section">
+              Web Site
+            </button>
           </li>
           <li>
-            <button type="button" class="filter-buttons">App</button>
+            <button type="button" class="filter-buttons-section">App</button>
           </li>
           <li>
-            <button type="button" class="filter-buttons">Design</button>
+            <button type="button" class="filter-buttons-section">Design</button>
           </li>
           <li>
-            <button type="button" class="filter-buttons">Marketing</button>
+            <button type="button" class="filter-buttons-section">
+              Marketing
+            </button>
           </li>
         </ul>
-      </section>
 
-      <!-- Images cards -->
+        <!-- Images cards -->
 
-      <!-- Row one -->
-      <section>
+        <!-- Row one -->
+
         <ul>
           <li>
             <img
@@ -162,11 +170,11 @@
     </main>
 
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html" class="logo-second-link"
-        ><span class="logo-first-link">Web</span>Studio</a
+    <footer class="footer-section-down">
+      <a href="./portfolio.html" class="logo-first-link"
+        >Web<span class="logo-second-link-light">Studio</span></a
       >
-      <p class="fotter-paragraf">
+      <p class="fotter-paragraf-section">
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
