--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header-background-color">
       <nav>
-        <a href="./index.html" class="logo-second-link"
-          ><span class="logo-first-link">Web</span>Studio</a
+        <a href="./portfolio.html" class="logo-first-link"
+          >Web<span class="logo-second-link">Studio</span></a
         >
         <ul>
           <li><a href="index.html" class="topline-words-header">Studio</a></li>
@@ -26,7 +26,7 @@
               >Portfolio</a
             >
           </li>
-          <li><a href="" class="topline-words">Contacts</a></li>
+          <li><a href="" class="topline-words-header">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -48,7 +48,7 @@
     <!-- Hero section -->
     <main>
       <!-- Section one -->
-      <section>
+      <section class="hero-section-background">
         <h1 class="hero-section-header">
           Effective Solutions for Your Business
         </h1>
@@ -60,28 +60,28 @@
         <ul class="list">
           <li>
             <h3 class="section-two-header">Strategy</h3>
-            <p class="section-two-pararaf">
+            <p class="section-two-paragraf">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="section-two-header">Punctuality</h3>
-            <p class="section-two-pararaf">
+            <p class="section-two-paragraf">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="section-two-header">Diligence</h3>
-            <p class="section-two-pararaf">
+            <p class="section-two-paragraf">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="section-two-header">Technologies</h3>
-            <p class="section-two-pararaf">
+            <p class="section-two-paragraf">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -94,13 +94,28 @@
         <h2 class="section-three-header">What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/image-one.jpg" alt="Image-one" width="360" />
+            <img
+              src="./images/image-one.jpg"
+              alt="Image-one"
+              width="360"
+              class="image-section-three"
+            />
           </li>
           <li>
-            <img src="./images/image-two.jpg" alt="Image-two" width="360" />
+            <img
+              src="./images/image-two.jpg"
+              alt="Image-two"
+              width="360"
+              class="image-section-three"
+            />
           </li>
           <li>
-            <img src="./images/image-three.jpg" alt="Image-three" width="360" />
+            <img
+              src="./images/image-three.jpg"
+              alt="Image-three"
+              width="360"
+              class="image-section-three"
+            />
           </li>
         </ul>
       </section>
@@ -139,7 +154,7 @@
 
     <!-- Footer section -->
     <footer class="footer-section-down">
-      <a href="./portfolio.html" class="logo-first-link"
+      <a href="./portfolio.html" class="logo-first-link-light"
         >Web<span class="logo-second-link-light">Studio</span></a
       >
       <p class="fotter-paragraf-section">
