--- a/portfolio.html
+++ b/portfolio.html
@@ -51,21 +51,29 @@
       <!-- Buttons -->
       <section>
         <h1 hidden>Text</h1>
-        <ul>
+        <ul class="list">
           <li>
             <button type="button" class="filter-buttons-section">All</button>
           </li>
+        </ul>
+        <ul>
           <li>
             <button type="button" class="filter-buttons-section">
               Web Site
             </button>
           </li>
+        </ul>
+        <ul>
           <li>
             <button type="button" class="filter-buttons-section">App</button>
           </li>
+        </ul>
+        <ul>
           <li>
             <button type="button" class="filter-buttons-section">Design</button>
           </li>
+        </ul>
+        <ul>
           <li>
             <button type="button" class="filter-buttons-section">
               Marketing
@@ -84,85 +92,99 @@
               alt="image-one-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Banking App Interface Concept</h3>
+            <h2 class="image-card-header">Banking App Interface Concept</h2>
             <p class="image-card-paragraf">App</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-two-hw2.jpg"
               alt="image-two-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Cashless Payment</h3>
+            <h2 class="image-card-header">Cashless Payment</h2>
             <p class="image-card-paragraf">Marketing</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-three-hw2.jpg"
               alt="image-three-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Meditaion App</h3>
+            <h2 class="image-card-header">Meditaion App</h2>
             <p class="image-card-paragraf">App</p>
           </li>
+        </ul>
 
-          <!-- Row two -->
-
+        <!-- Row two -->
+        <ul>
           <li>
             <img
               src="./images/image-four-hw2.jpg"
               alt="image-four-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Taxi Service</h3>
+            <h2 class="image-card-header">Taxi Service</h2>
             <p class="image-card-paragraf">Marketing</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-five-hw2.jpg"
               alt="image-five-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Screen Illustrations</h3>
+            <h2 class="image-card-header">Screen Illustrations</h2>
             <p class="image-card-paragraf">Design</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-six-hw2.jpg"
               alt="image-six-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Online Courses</h3>
+            <h2 class="image-card-header">Online Courses</h2>
             <p class="image-card-paragraf">Marketing</p>
           </li>
+        </ul>
 
-          <!-- Row three -->
-
+        <!-- Row three -->
+        <ul>
           <li>
             <img
               src="./images/image-seven-hw2.jpg"
               alt="image-seven-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Instagram Stories Concept</h3>
+            <h2 class="image-card-header">Instagram Stories Concept</h2>
             <p class="image-card-paragraf">Design</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-eight-hw2.jpg"
               alt="image-eight-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Organic Food</h3>
+            <h2 class="image-card-header">Organic Food</h2>
             <p class="image-card-paragraf">Web Site</p>
           </li>
+        </ul>
+        <ul>
           <li>
             <img
               src="./images/image-nine-hw2.jpg"
               alt="image-nine-hw2"
               width="360"
             />
-            <h3 class="image-card-header">Fresh Coffee</h3>
+            <h2 class="image-card-header">Fresh Coffee</h2>
             <p class="image-card-paragraf">Web Site</p>
           </li>
         </ul>
