--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <!-- Section three -->
       <section>
         <h2 class="section-three-header">What are we doing</h2>
-        <ul>
+        <ul calss="list">
           <li>
             <img
               src="./images/image-one.jpg"
@@ -154,8 +154,8 @@
 
     <!-- Footer section -->
     <footer class="footer-section-down">
-      <a href="./portfolio.html" class="logo-first-link-light"
-        >Web<span class="logo-second-link-light">Studio</span></a
+      <a href="./portfolio.html" class="logo-first-link-light link"
+        >Web<span class="logo-second-link-light link">Studio</span></a
       >
       <p class="fotter-paragraf-section">
         Increase the flow of customers and sales for your business with digital
