--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>hw-002</title>
   </head>
-  <body>
+  <body style="color: #434455; font-family: Roboto, sans-serif">
     <!-- Header -->
     <header>
       <nav>
-        <a href="./portfolio.html" class="logo-first-link"
-          >Web<span class="logo-second-link">Studio</span></a
+        <a href="./portfolio.html" class="logo-first-link link"
+          >Web<span class="logo-second-link link">Studio</span></a
         >
         <ul class="list">
           <li>
@@ -55,25 +55,19 @@
           <li>
             <button type="button" class="filter-buttons-section">All</button>
           </li>
-        </ul>
-        <ul>
           <li>
             <button type="button" class="filter-buttons-section">
               Web Site
             </button>
           </li>
-        </ul>
-        <ul>
           <li>
             <button type="button" class="filter-buttons-section">App</button>
           </li>
-        </ul>
-        <ul>
+
           <li>
             <button type="button" class="filter-buttons-section">Design</button>
           </li>
-        </ul>
-        <ul>
+
           <li>
             <button type="button" class="filter-buttons-section">
               Marketing
@@ -85,7 +79,7 @@
 
         <!-- Row one -->
 
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/image-one-hw2.jpg"
